fixed the alignment problem with the Buy button

--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -1,9 +1,8 @@
 .card-new {
 	position: relative;
 	width: 230px;
-	height: 325px;
+	height: 355px;
 	padding-top: 15px;
-
 	min-width: 200px;
 	margin: 10px;
 	/* display: -ms-flexbox; */
@@ -35,7 +34,15 @@
 
 .card-new-body {
 	padding: 20px;
+	height: 200px;
+	align-content: space-between;
+	display: flex;
+	flex-wrap: wrap;
 }
+/* 
+.card-new-body > div {
+	min-height: 30px;
+} */
 
 .card-title {
 	font-size: 16px;
